<resources>
    <string name="app_name">Dailing</string>

    <!-- Onboarding Screen -->

    <string name="first_slide_title">All day busy</string>
    <string name="second_slide_title">Overwhelmed by all social media\'s emotions</string>
    <string name="third_slide_title">Take a step back \&amp;</string>


    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>

    <!-- Get started Screen -->
    <string name="get_started">Get Started</string>
    <string name="already_have_an_account_btn_text">Already have an account</string>

    <string name="dailing_get_started"><b>Dailing</b></string>
    <string name="get_started_subtitle">A daily message to self.</string>

    <!-- Sign up Screen -->
    <string name="sign_up">Sign up</string>
    <string name="sign_up_subtitle_social_media">Creating account using social media</string>
    <string name="facebook_login_content_desc">Facebook login</string>
    <string name="google_login_content_desc">Google Login</string>
    <string name="twitter_login_content_desc">Twitter Login</string>
    <string name="conditions_checkbox_text">By signing up you agree to our Conditions
        and \nPrivacy policy.</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account! Login</string>

    <!-- Login Screen -->
    <string name="login">Login</string>
    <string name="login_subtitle_social_media">Login to your account</string>
    <string name="email_or_username">Email or username</string>
    <string name="forgot_your_password"><u>Forgot your password?</u></string>
    <string name="dont_have_an_account">You don\'t have an account? Sign Up</string>
    <string name="start_dailing">Start Dailing</string>
    <string name="bg">background</string>

    <!-- ____________________ -->
</resources>