<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.intro.OnboardingFragment">


            <Button
                android:id="@+id/next_button"
                style="@style/AppTheme.Button.Transparent"
                app:backgroundTint="@null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="32dp"
                android:drawableEnd="@drawable/ic_right_arrow_next_btn"
                android:text="@string/next_btn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/skip_button"
                style="@style/AppTheme.Button.Transparent"
                app:backgroundTint="@null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/skip_btn"
                android:textColor="@color/grey"
                app:layout_constraintBottom_toBottomOf="@+id/next_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/next_button" />

            <Button
                android:id="@+id/start_dailing_button"
                app:backgroundTint="@null"
                style="@style/AppTheme.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:text="@string/start_dailing"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/onboarding_viewPager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/onboarding_indicator"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </androidx.viewpager2.widget.ViewPager2>

            <me.relex.circleindicator.CircleIndicator3
                android:id="@+id/onboarding_indicator"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/indicator_height"
                app:ci_drawable="@drawable/indicator_active"
                app:ci_drawable_unselected="@drawable/indicator_inactive"
                app:layout_constraintBottom_toTopOf="@id/next_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/onboarding_viewPager"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>